# serde-pickle-rs

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: main.yml
benches/: benchmark.rs
examples/: pickle.rs
fuzz/: Cargo.toml
src/: consts.rs  de.rs  lib.rs  ser.rs  value.rs  value_impls.rs
test/: arby.rs  mod.rs
test/data/: persistent_id.pickle
