[package]
name = "serde-pickle-rs"
version = "1.0.1"
authors = ["Arshad M <arshadm@spinorml.com>"]
license = "MIT/Apache-2.0"
description = "A serde-based serialization library for Python's pickle format"
repository = "https://github.com/spinorml/serde-pickle-rs"
documentation = "http://docs.rs/serde-pickle-rs"
keywords = ["pickle", "python", "serde", "serialization"]
edition = "2021"

[dependencies]
serde = { version = "1.0.192", features = ["derive"] }
byteorder = "1.5.0"
num-bigint = "0.4.4"
num-traits = "0.2.17"
iter-read = "0.3.1"

# For the example binary and the test suite.
[dev-dependencies]
serde_derive = "1.0.192"
serde_json = "1.0.108"
rand = "0.8.5"
quickcheck = "1.0.3"
criterion = "0.5.1"

[[bench]]
name = "benchmark"
harness = false

[profile.release]
debug = 1
